Changed one of the descriptions in the table (Power available to power usage

--- a/FlaskGraph/templates/showdevicesa.html
+++ b/FlaskGraph/templates/showdevicesa.html
@@ -49,8 +49,8 @@
     <tr style="line-height:12px;">
         <td style="background-color: black"><font face="arial" size="1" style="color: darkorange;">Power supply {{ items['power_supply_number'] }} status</font></td>
         <td><font face="arial" size="1">{{ items['power_supply_state'][5:] }}</font></td>
-        <td style="background-color: black"><font face="arial" size="1" style="color: darkorange;">Power available</font></td>
-        <td><font face="arial" size="1">{{ items['power_in_use_in_watts'] }}</font></td>
+        <td style="background-color: black"><font face="arial" size="1" style="color: darkorange;">Power usage</font></td>
+        <td><font face="arial" size="1">{{ items['power_in_use_in_watts'] }} Watt</font></td>
         <td style="background-color: black"><font face="arial" size="1" style="color: darkorange;">Voltage</font></td>
         <td><font face="arial" size="1">{{ items['voltage_description'] }}</font></td>
         <td style="background-color: black"><font face="arial" size="1" style="color: darkorange;">Model (Serial number)</font></td>
