--- a/FlaskGraph/templates/navbar.html
+++ b/FlaskGraph/templates/navbar.html
@@ -1,11 +1,14 @@
-﻿<nav class="navbar navbar-inverse navbar-fixed-top">
-    <p class="navbar-text navbar-left" style="color: darkorange;"><strong>If it moves, graph it</strong>&nbsp;&nbsp;</p>
-    <div class="container-fluid">
-        <ul class="nav navbar-nav">
-            <li><a href="/" style="color: darkorange;"><strong>Devices</strong></a></li>
-            <li><a href="/deviceinfo" style="color: darkorange;"><strong>Device Monitoring</strong></a></li>
-        </ul>
-        <p class="navbar-text navbar-right" style="color: darkorange"><strong>{{ pagename }} &nbsp;&nbsp;</strong></p>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand"  style="color: darkorange;">If it moves, graph it</a>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/" style="color: darkorange;">Devices</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/deviceinfo" style="color: darkorange;">Device Monitoring</a>
+      </li> 
+    </ul>
+  </div>
+  <a class="navbar-brand navbar-right"  style="color: darkorange;">{{ pagename }}</a>
 </nav>
-<div style="height: 30px"></div>
