--- a/FlaskGraph/templates/navbar.html
+++ b/FlaskGraph/templates/navbar.html
@@ -1,14 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand"  style="color: darkorange;">If it moves, graph it</a>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/" style="color: darkorange;">Devices</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/deviceinfo" style="color: darkorange;">Device Monitoring</a>
-      </li> 
-    </ul>
-  </div>
-  <a class="navbar-brand navbar-right"  style="color: darkorange;">{{ pagename }}</a>
+<nav class="navbar" style="background-color: #000000;border-color: #E7E7E7;">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" style="color: darkorange;">If it moves, graph it</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="/" style="color: darkorange;">Devices</a></li>
+                <li><a href="/deviceinfo" style="color: darkorange;">Device Monitoring</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <a class="navbar-brand navbar-right" style="color: darkorange;">{{ pagename }}</a>
+            </ul>
+        </div>
+    </div>
 </nav>
