Modified files, removed mbrella references

--- a/templates/sysconf.html
+++ b/templates/sysconf.html
@@ -97,7 +97,7 @@ netInfo is dictionary containing a list of variables:
     <table class="tablewithborder">
         <tr style="background-color:black;"><td colspan="4" align="center" style="color:orange;">System information</td></tr>
         <tr>
-            <td><font class="font13px">mBrella Software version</font></td>
+            <td><font class="font13px">Carius Software version</font></td>
             <td><font class="font11px">{{sysvars.softwareRelease}}</font></td>
             <td><font class="font13px">System time</font></td>
             <td>
